
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_18__ TYPE_4__ ;
typedef struct TYPE_17__ TYPE_3__ ;
typedef struct TYPE_16__ TYPE_2__ ;
typedef struct TYPE_15__ TYPE_1__ ;


typedef int WSC_SECURITY_PRODUCT_STATE ;
struct TYPE_18__ {TYPE_2__* lpVtbl; } ;
struct TYPE_17__ {TYPE_1__* lpVtbl; } ;
struct TYPE_16__ {int (* Release ) (TYPE_4__*) ;int (* get_Item ) (TYPE_4__*,int,TYPE_3__**) ;int (* get_Count ) (TYPE_4__*,int*) ;int (* Initialize ) (TYPE_4__*,int) ;} ;
struct TYPE_15__ {int (* Release ) (TYPE_3__*) ;int (* get_ProductState ) (TYPE_3__*,int *) ;int (* get_ProductName ) (TYPE_3__*,int *) ;} ;
typedef int LONG ;
typedef TYPE_3__ IWscProduct ;
typedef TYPE_4__ IWSCProductList ;
typedef int HRESULT ;
typedef int BSTR ;


 scalar_t__ FAILED (int ) ;
 int LOG_INFO ;
 int SysFreeString (int ) ;
 int blog (int ,char*,int ,int ,int ) ;
 int get_str_for_state (int ) ;
 int get_str_for_type (int) ;
 int stub1 (TYPE_4__*,int) ;
 int stub2 (TYPE_4__*,int*) ;
 int stub3 (TYPE_4__*) ;
 int stub4 (TYPE_4__*,int,TYPE_3__**) ;
 int stub5 (TYPE_3__*,int *) ;
 int stub6 (TYPE_3__*,int *) ;
 int stub7 (TYPE_3__*) ;
 int stub8 (TYPE_4__*) ;

__attribute__((used)) static void log_security_products_by_type(IWSCProductList *prod_list, int type)
{
 HRESULT hr;
 LONG count = 0;
 IWscProduct *prod;
 BSTR name;
 WSC_SECURITY_PRODUCT_STATE prod_state;

 hr = prod_list->lpVtbl->Initialize(prod_list, type);

 if (FAILED(hr))
  return;

 hr = prod_list->lpVtbl->get_Count(prod_list, &count);
 if (FAILED(hr)) {
  prod_list->lpVtbl->Release(prod_list);
  return;
 }

 for (int i = 0; i < count; i++) {
  hr = prod_list->lpVtbl->get_Item(prod_list, i, &prod);
  if (FAILED(hr))
   continue;

  hr = prod->lpVtbl->get_ProductName(prod, &name);
  if (FAILED(hr))
   continue;

  hr = prod->lpVtbl->get_ProductState(prod, &prod_state);
  if (FAILED(hr)) {
   SysFreeString(name);
   continue;
  }

  blog(LOG_INFO, "\t%S: %s (%s)", name,
       get_str_for_state(prod_state), get_str_for_type(type));

  SysFreeString(name);
  prod->lpVtbl->Release(prod);
 }

 prod_list->lpVtbl->Release(prod_list);
}
